parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> dec_star
Rule 2     dec_star -> <empty>
Rule 3     dec_star -> dec_star dec
Rule 4     dec -> dvar
Rule 5     dec -> dfunc
Rule 6     dec -> destr
Rule 7     dvar -> tipo ID SEMICOLON
Rule 8     dvar -> tipo ID ATRIB expr SEMICOLON
Rule 9     tipo -> INT
Rule 10    tipo -> FLOAT
Rule 11    tipo -> CHAR
Rule 12    tipo -> BOOLEAN
Rule 13    dfunc -> tipo ID LPAREN parametros RPAREN bloco
Rule 14    parametros -> param
Rule 15    parametros -> param COMMA parametros
Rule 16    param -> tipo ID
Rule 17    param -> tipo array
Rule 18    param -> tipo DOT DOT DOT ID
Rule 19    bloco -> LBRACE dec RBRACE
Rule 20    expr -> atrib
Rule 21    atrib -> ID ATRIB expr
Rule 22    atrib -> ID PLUS ATRIB expr
Rule 23    atrib -> ID MINUS ATRIB expr
Rule 24    atrib -> ID TIMES ATRIB expr
Rule 25    atrib -> ID DIVIDE ATRIB expr
Rule 26    atrib -> ID PERCENT ATRIB expr
Rule 27    atrib -> ID AND ATRIB expr
Rule 28    atrib -> ID ATRIB ID
Rule 29    atrib -> ID PLUS ATRIB ID
Rule 30    atrib -> ID MINUS ATRIB ID
Rule 31    atrib -> ID TIMES ATRIB ID
Rule 32    atrib -> ID DIVIDE ATRIB ID
Rule 33    atrib -> ID PERCENT ATRIB ID
Rule 34    atrib -> ID AND ATRIB ID
Rule 35    atrib -> ID OR ATRIB ID
Rule 36    control -> IF LPAREN expr RPAREN bloco
Rule 37    control -> IF LPAREN expr RPAREN bloco ELSE bloco
Rule 38    control -> WHILE LPAREN expr RPAREN bloco
Rule 39    control -> FOR LPAREN expr SEMICOLON expr SEMICOLON RPAREN bloco
Rule 40    control -> SWITCH LPAREN expr RPAREN caselista
Rule 41    caselista -> casedec_star
Rule 42    casedec_star -> <empty>
Rule 43    casedec_star -> casedec_star casedec
Rule 44    casedec -> CASE expr COLON bloco
Rule 45    casedec -> DEFAULT COLON bloco
Rule 46    control -> BREAK SEMICOLON
Rule 47    control -> CONTINUE SEMICOLON
Rule 48    control -> RETURN expr SEMICOLON
Rule 49    destr -> STRUCT ID LBRACE dvar_star RBRACE SEMICOLON
Rule 50    destr -> control
Rule 51    dvar_star -> <empty>
Rule 52    dvar_star -> dvar_star dvar
Rule 53    array -> ID LBRACKET expr RBRACKET
Rule 54    array -> ID LBRACKET RBRACKET
Rule 55    expr -> expr_log
Rule 56    expr_log -> expr_rel
Rule 57    expr_log -> expr_log AND expr_rel
Rule 58    expr_log -> expr_log OR expr_rel
Rule 59    expr_log -> NOT expr_rel
Rule 60    expr_rel -> expr_ar
Rule 61    expr_rel -> expr_ar GREATER expr_ar
Rule 62    expr_rel -> expr_ar GREATER ATRIB expr_ar
Rule 63    expr_rel -> expr_ar LESS expr_ar
Rule 64    expr_rel -> expr_ar LESS ATRIB expr_ar
Rule 65    expr_rel -> expr_ar NOT ATRIB expr_ar
Rule 66    expr_rel -> expr_ar ATRIB ATRIB expr_ar
Rule 67    expr_ar -> expr_mul
Rule 68    expr_ar -> expr_ar PLUS expr_mul
Rule 69    expr_ar -> expr_ar MINUS expr_mul
Rule 70    expr_mul -> expr_un
Rule 71    expr_mul -> expr_mul TIMES expr_un
Rule 72    expr_mul -> expr_mul DIVIDE expr_un
Rule 73    expr_mul -> expr_mul PERCENT expr_un
Rule 74    expr_un -> expr_postfix
Rule 75    expr_un -> MINUS expr_un
Rule 76    expr_un -> PLUS PLUS expr_postfix
Rule 77    expr_postfix -> primary
Rule 78    expr_postfix -> primary LBRACKET expr RBRACKET
Rule 79    expr_postfix -> primary LPAREN args RPAREN
Rule 80    expr_postfix -> primary DOT ID
Rule 81    expr_postfix -> primary MINUS GREATER ID
Rule 82    args -> expr
Rule 83    args -> <empty>
Rule 84    primary -> ID
Rule 85    primary -> NUM_INT
Rule 86    primary -> NUM_DEC
Rule 87    primary -> TEXTO
Rule 88    primary -> LPAREN expr RPAREN

Terminals, with rules where they appear

AND                  : 27 34 57
ATRIB                : 8 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 62 64 65 66 66
BOOLEAN              : 12
BREAK                : 46
CASE                 : 44
CHAR                 : 11
COLON                : 44 45
COMMA                : 15
CONTINUE             : 47
DEFAULT              : 45
DIVIDE               : 25 32 72
DOT                  : 18 18 18 80
ELSE                 : 37
FLOAT                : 10
FOR                  : 39
GREATER              : 61 62 81
ID                   : 7 8 13 16 18 21 22 23 24 25 26 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 49 53 54 80 81 84
IF                   : 36 37
INT                  : 9
LBRACE               : 19 49
LBRACKET             : 53 54 78
LESS                 : 63 64
LPAREN               : 13 36 37 38 39 40 79 88
MINUS                : 23 30 69 75 81
NOT                  : 59 65
NUM_DEC              : 86
NUM_INT              : 85
OR                   : 35 58
PERCENT              : 26 33 73
PLUS                 : 22 29 68 76 76
RBRACE               : 19 49
RBRACKET             : 53 54 78
RETURN               : 48
RPAREN               : 13 36 37 38 39 40 79 88
SEMICOLON            : 7 8 39 39 46 47 48 49
STRUCT               : 49
SWITCH               : 40
TEXTO                : 87
TIMES                : 24 31 71
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

args                 : 79
array                : 17
atrib                : 20
bloco                : 13 36 37 37 38 39 44 45
casedec              : 43
casedec_star         : 41 43
caselista            : 40
control              : 50
dec                  : 3 19
dec_star             : 1 3
destr                : 6
dfunc                : 5
dvar                 : 4 52
dvar_star            : 49 52
expr                 : 8 21 22 23 24 25 26 27 36 37 38 39 39 40 44 48 53 78 82 88
expr_ar              : 60 61 61 62 62 63 63 64 64 65 65 66 66 68 69
expr_log             : 55 57 58
expr_mul             : 67 68 69 71 72 73
expr_postfix         : 74 76
expr_rel             : 56 57 58 59
expr_un              : 70 71 72 73 75
param                : 14 15
parametros           : 13 15
primary              : 77 78 79 80 81
programa             : 0
tipo                 : 7 8 13 16 17 18


state 0

    (0) S' -> . programa
    (1) programa -> . dec_star
    (2) dec_star -> .
    (3) dec_star -> . dec_star dec

    STRUCT          reduce using rule 2 (dec_star -> .)
    INT             reduce using rule 2 (dec_star -> .)
    FLOAT           reduce using rule 2 (dec_star -> .)
    CHAR            reduce using rule 2 (dec_star -> .)
    BOOLEAN         reduce using rule 2 (dec_star -> .)
    IF              reduce using rule 2 (dec_star -> .)
    WHILE           reduce using rule 2 (dec_star -> .)
    FOR             reduce using rule 2 (dec_star -> .)
    SWITCH          reduce using rule 2 (dec_star -> .)
    BREAK           reduce using rule 2 (dec_star -> .)
    CONTINUE        reduce using rule 2 (dec_star -> .)
    RETURN          reduce using rule 2 (dec_star -> .)
    $end            reduce using rule 2 (dec_star -> .)

    programa                       shift and go to state 1
    dec_star                       shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> dec_star .
    (3) dec_star -> dec_star . dec
    (4) dec -> . dvar
    (5) dec -> . dfunc
    (6) dec -> . destr
    (7) dvar -> . tipo ID SEMICOLON
    (8) dvar -> . tipo ID ATRIB expr SEMICOLON
    (13) dfunc -> . tipo ID LPAREN parametros RPAREN bloco
    (49) destr -> . STRUCT ID LBRACE dvar_star RBRACE SEMICOLON
    (50) destr -> . control
    (9) tipo -> . INT
    (10) tipo -> . FLOAT
    (11) tipo -> . CHAR
    (12) tipo -> . BOOLEAN
    (36) control -> . IF LPAREN expr RPAREN bloco
    (37) control -> . IF LPAREN expr RPAREN bloco ELSE bloco
    (38) control -> . WHILE LPAREN expr RPAREN bloco
    (39) control -> . FOR LPAREN expr SEMICOLON expr SEMICOLON RPAREN bloco
    (40) control -> . SWITCH LPAREN expr RPAREN caselista
    (46) control -> . BREAK SEMICOLON
    (47) control -> . CONTINUE SEMICOLON
    (48) control -> . RETURN expr SEMICOLON

    $end            reduce using rule 1 (programa -> dec_star .)
    STRUCT          shift and go to state 8
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    BOOLEAN         shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    FOR             shift and go to state 16
    SWITCH          shift and go to state 17
    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    RETURN          shift and go to state 20

    dec                            shift and go to state 3
    dvar                           shift and go to state 4
    dfunc                          shift and go to state 5
    destr                          shift and go to state 6
    tipo                           shift and go to state 7
    control                        shift and go to state 9

state 3

    (3) dec_star -> dec_star dec .

    STRUCT          reduce using rule 3 (dec_star -> dec_star dec .)
    INT             reduce using rule 3 (dec_star -> dec_star dec .)
    FLOAT           reduce using rule 3 (dec_star -> dec_star dec .)
    CHAR            reduce using rule 3 (dec_star -> dec_star dec .)
    BOOLEAN         reduce using rule 3 (dec_star -> dec_star dec .)
    IF              reduce using rule 3 (dec_star -> dec_star dec .)
    WHILE           reduce using rule 3 (dec_star -> dec_star dec .)
    FOR             reduce using rule 3 (dec_star -> dec_star dec .)
    SWITCH          reduce using rule 3 (dec_star -> dec_star dec .)
    BREAK           reduce using rule 3 (dec_star -> dec_star dec .)
    CONTINUE        reduce using rule 3 (dec_star -> dec_star dec .)
    RETURN          reduce using rule 3 (dec_star -> dec_star dec .)
    $end            reduce using rule 3 (dec_star -> dec_star dec .)


state 4

    (4) dec -> dvar .

    STRUCT          reduce using rule 4 (dec -> dvar .)
    INT             reduce using rule 4 (dec -> dvar .)
    FLOAT           reduce using rule 4 (dec -> dvar .)
    CHAR            reduce using rule 4 (dec -> dvar .)
    BOOLEAN         reduce using rule 4 (dec -> dvar .)
    IF              reduce using rule 4 (dec -> dvar .)
    WHILE           reduce using rule 4 (dec -> dvar .)
    FOR             reduce using rule 4 (dec -> dvar .)
    SWITCH          reduce using rule 4 (dec -> dvar .)
    BREAK           reduce using rule 4 (dec -> dvar .)
    CONTINUE        reduce using rule 4 (dec -> dvar .)
    RETURN          reduce using rule 4 (dec -> dvar .)
    $end            reduce using rule 4 (dec -> dvar .)
    RBRACE          reduce using rule 4 (dec -> dvar .)


state 5

    (5) dec -> dfunc .

    STRUCT          reduce using rule 5 (dec -> dfunc .)
    INT             reduce using rule 5 (dec -> dfunc .)
    FLOAT           reduce using rule 5 (dec -> dfunc .)
    CHAR            reduce using rule 5 (dec -> dfunc .)
    BOOLEAN         reduce using rule 5 (dec -> dfunc .)
    IF              reduce using rule 5 (dec -> dfunc .)
    WHILE           reduce using rule 5 (dec -> dfunc .)
    FOR             reduce using rule 5 (dec -> dfunc .)
    SWITCH          reduce using rule 5 (dec -> dfunc .)
    BREAK           reduce using rule 5 (dec -> dfunc .)
    CONTINUE        reduce using rule 5 (dec -> dfunc .)
    RETURN          reduce using rule 5 (dec -> dfunc .)
    $end            reduce using rule 5 (dec -> dfunc .)
    RBRACE          reduce using rule 5 (dec -> dfunc .)


state 6

    (6) dec -> destr .

    STRUCT          reduce using rule 6 (dec -> destr .)
    INT             reduce using rule 6 (dec -> destr .)
    FLOAT           reduce using rule 6 (dec -> destr .)
    CHAR            reduce using rule 6 (dec -> destr .)
    BOOLEAN         reduce using rule 6 (dec -> destr .)
    IF              reduce using rule 6 (dec -> destr .)
    WHILE           reduce using rule 6 (dec -> destr .)
    FOR             reduce using rule 6 (dec -> destr .)
    SWITCH          reduce using rule 6 (dec -> destr .)
    BREAK           reduce using rule 6 (dec -> destr .)
    CONTINUE        reduce using rule 6 (dec -> destr .)
    RETURN          reduce using rule 6 (dec -> destr .)
    $end            reduce using rule 6 (dec -> destr .)
    RBRACE          reduce using rule 6 (dec -> destr .)


state 7

    (7) dvar -> tipo . ID SEMICOLON
    (8) dvar -> tipo . ID ATRIB expr SEMICOLON
    (13) dfunc -> tipo . ID LPAREN parametros RPAREN bloco

    ID              shift and go to state 21


state 8

    (49) destr -> STRUCT . ID LBRACE dvar_star RBRACE SEMICOLON

    ID              shift and go to state 22


state 9

    (50) destr -> control .

    STRUCT          reduce using rule 50 (destr -> control .)
    INT             reduce using rule 50 (destr -> control .)
    FLOAT           reduce using rule 50 (destr -> control .)
    CHAR            reduce using rule 50 (destr -> control .)
    BOOLEAN         reduce using rule 50 (destr -> control .)
    IF              reduce using rule 50 (destr -> control .)
    WHILE           reduce using rule 50 (destr -> control .)
    FOR             reduce using rule 50 (destr -> control .)
    SWITCH          reduce using rule 50 (destr -> control .)
    BREAK           reduce using rule 50 (destr -> control .)
    CONTINUE        reduce using rule 50 (destr -> control .)
    RETURN          reduce using rule 50 (destr -> control .)
    $end            reduce using rule 50 (destr -> control .)
    RBRACE          reduce using rule 50 (destr -> control .)


state 10

    (9) tipo -> INT .

    ID              reduce using rule 9 (tipo -> INT .)
    DOT             reduce using rule 9 (tipo -> INT .)


state 11

    (10) tipo -> FLOAT .

    ID              reduce using rule 10 (tipo -> FLOAT .)
    DOT             reduce using rule 10 (tipo -> FLOAT .)


state 12

    (11) tipo -> CHAR .

    ID              reduce using rule 11 (tipo -> CHAR .)
    DOT             reduce using rule 11 (tipo -> CHAR .)


state 13

    (12) tipo -> BOOLEAN .

    ID              reduce using rule 12 (tipo -> BOOLEAN .)
    DOT             reduce using rule 12 (tipo -> BOOLEAN .)


state 14

    (36) control -> IF . LPAREN expr RPAREN bloco
    (37) control -> IF . LPAREN expr RPAREN bloco ELSE bloco

    LPAREN          shift and go to state 23


state 15

    (38) control -> WHILE . LPAREN expr RPAREN bloco

    LPAREN          shift and go to state 24


state 16

    (39) control -> FOR . LPAREN expr SEMICOLON expr SEMICOLON RPAREN bloco

    LPAREN          shift and go to state 25


state 17

    (40) control -> SWITCH . LPAREN expr RPAREN caselista

    LPAREN          shift and go to state 26


state 18

    (46) control -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 27


state 19

    (47) control -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 28


state 20

    (48) control -> RETURN . expr SEMICOLON
    (20) expr -> . atrib
    (55) expr -> . expr_log
    (21) atrib -> . ID ATRIB expr
    (22) atrib -> . ID PLUS ATRIB expr
    (23) atrib -> . ID MINUS ATRIB expr
    (24) atrib -> . ID TIMES ATRIB expr
    (25) atrib -> . ID DIVIDE ATRIB expr
    (26) atrib -> . ID PERCENT ATRIB expr
    (27) atrib -> . ID AND ATRIB expr
    (28) atrib -> . ID ATRIB ID
    (29) atrib -> . ID PLUS ATRIB ID
    (30) atrib -> . ID MINUS ATRIB ID
    (31) atrib -> . ID TIMES ATRIB ID
    (32) atrib -> . ID DIVIDE ATRIB ID
    (33) atrib -> . ID PERCENT ATRIB ID
    (34) atrib -> . ID AND ATRIB ID
    (35) atrib -> . ID OR ATRIB ID
    (56) expr_log -> . expr_rel
    (57) expr_log -> . expr_log AND expr_rel
    (58) expr_log -> . expr_log OR expr_rel
    (59) expr_log -> . NOT expr_rel
    (60) expr_rel -> . expr_ar
    (61) expr_rel -> . expr_ar GREATER expr_ar
    (62) expr_rel -> . expr_ar GREATER ATRIB expr_ar
    (63) expr_rel -> . expr_ar LESS expr_ar
    (64) expr_rel -> . expr_ar LESS ATRIB expr_ar
    (65) expr_rel -> . expr_ar NOT ATRIB expr_ar
    (66) expr_rel -> . expr_ar ATRIB ATRIB expr_ar
    (67) expr_ar -> . expr_mul
    (68) expr_ar -> . expr_ar PLUS expr_mul
    (69) expr_ar -> . expr_ar MINUS expr_mul
    (70) expr_mul -> . expr_un
    (71) expr_mul -> . expr_mul TIMES expr_un
    (72) expr_mul -> . expr_mul DIVIDE expr_un
    (73) expr_mul -> . expr_mul PERCENT expr_un
    (74) expr_un -> . expr_postfix
    (75) expr_un -> . MINUS expr_un
    (76) expr_un -> . PLUS PLUS expr_postfix
    (77) expr_postfix -> . primary
    (78) expr_postfix -> . primary LBRACKET expr RBRACKET
    (79) expr_postfix -> . primary LPAREN args RPAREN
    (80) expr_postfix -> . primary DOT ID
    (81) expr_postfix -> . primary MINUS GREATER ID
    (84) primary -> . ID
    (85) primary -> . NUM_INT
    (86) primary -> . NUM_DEC
    (87) primary -> . TEXTO
    (88) primary -> . LPAREN expr RPAREN

    ID              shift and go to state 32
    NOT             shift and go to state 36
    MINUS           shift and go to state 34
    PLUS            shift and go to state 33
    NUM_INT         shift and go to state 43
    NUM_DEC         shift and go to state 44
    TEXTO           shift and go to state 45
    LPAREN          shift and go to state 42

    expr                           shift and go to state 29
    atrib                          shift and go to state 30
    expr_log                       shift and go to state 31
    expr_rel                       shift and go to state 35
    expr_ar                        shift and go to state 37
    expr_mul                       shift and go to state 38
    expr_un                        shift and go to state 39
    expr_postfix                   shift and go to state 40
    primary                        shift and go to state 41

state 21

    (7) dvar -> tipo ID . SEMICOLON
    (8) dvar -> tipo ID . ATRIB expr SEMICOLON
    (13) dfunc -> tipo ID . LPAREN parametros RPAREN bloco

    SEMICOLON       shift and go to state 46
    ATRIB           shift and go to state 47
    LPAREN          shift and go to state 48


state 22

    (49) destr -> STRUCT ID . LBRACE dvar_star RBRACE SEMICOLON

    LBRACE          shift and go to state 49


state 23

    (36) control -> IF LPAREN . expr RPAREN bloco
    (37) control -> IF LPAREN . expr RPAREN bloco ELSE bloco
    (20) expr -> . atrib
    (55) expr -> . expr_log
    (21) atrib -> . ID ATRIB expr
    (22) atrib -> . ID PLUS ATRIB expr
    (23) atrib -> . ID MINUS ATRIB expr
    (24) atrib -> . ID TIMES ATRIB expr
    (25) atrib -> . ID DIVIDE ATRIB expr
    (26) atrib -> . ID PERCENT ATRIB expr
    (27) atrib -> . ID AND ATRIB expr
    (28) atrib -> . ID ATRIB ID
    (29) atrib -> . ID PLUS ATRIB ID
    (30) atrib -> . ID MINUS ATRIB ID
    (31) atrib -> . ID TIMES ATRIB ID
    (32) atrib -> . ID DIVIDE ATRIB ID
    (33) atrib -> . ID PERCENT ATRIB ID
    (34) atrib -> . ID AND ATRIB ID
    (35) atrib -> . ID OR ATRIB ID
    (56) expr_log -> . expr_rel
    (57) expr_log -> . expr_log AND expr_rel
    (58) expr_log -> . expr_log OR expr_rel
    (59) expr_log -> . NOT expr_rel
    (60) expr_rel -> . expr_ar
    (61) expr_rel -> . expr_ar GREATER expr_ar
    (62) expr_rel -> . expr_ar GREATER ATRIB expr_ar
    (63) expr_rel -> . expr_ar LESS expr_ar
    (64) expr_rel -> . expr_ar LESS ATRIB expr_ar
    (65) expr_rel -> . expr_ar NOT ATRIB expr_ar
    (66) expr_rel -> . expr_ar ATRIB ATRIB expr_ar
    (67) expr_ar -> . expr_mul
    (68) expr_ar -> . expr_ar PLUS expr_mul
    (69) expr_ar -> . expr_ar MINUS expr_mul
    (70) expr_mul -> . expr_un
    (71) expr_mul -> . expr_mul TIMES expr_un
    (72) expr_mul -> . expr_mul DIVIDE expr_un
    (73) expr_mul -> . expr_mul PERCENT expr_un
